add: Rename notebook to postgres-notes and add query cost formula with detailed breakdown

--- a/notes/postgres-notes.ipynb
+++ b/notes/postgres-notes.ipynb
@@ -62,7 +62,49 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Query Cost Formula\n",
+    "\n",
+    "The cost of a query in PostgreSQL is calculated using the following formula:\n",
+    "\n",
+    "Cost = (# pages read sequentially) * 1.0  \n",
+    "     + (# pages read at random) * 4.0  \n",
+    "     + (# rows scanned) * 0.01  \n",
+    "     + (# index entries scanned) * 0.005  \n",
+    "     + (# times function/operator evaluated) * 0.0025\n",
+    "\n",
+    "\n",
+    "### Breakdown of Components:\n",
+    "- **Sequential Pages**:  \n",
+    "  Pages read sequentially cost `1.0` per page (cheaper than random access).  \n",
+    "\n",
+    "- **Random Pages**:  \n",
+    "  Pages read randomly cost `4.0` per page (more expensive than sequential access).  \n",
+    "\n",
+    "- **Rows Scanned**:  \n",
+    "  Each row scanned adds `0.01` to the total cost.  \n",
+    "\n",
+    "- **Index Entries Scanned**:  \n",
+    "  Each scanned index entry adds `0.005` to the total cost.  \n",
+    "\n",
+    "- **Function/Operator Evaluation**:  \n",
+    "  Each function/operator evaluation adds `0.0025` to the total cost.\n",
+    "\n",
+    "### Example:\n",
+    "If a query:\n",
+    "- Reads 10 sequential pages,\n",
+    "- Reads 2 random pages,\n",
+    "- Scans 500 rows,\n",
+    "- Scans 200 index entries, and\n",
+    "- Evaluates functions/operators 100 times,\n",
+    "\n",
+    "The total cost would be:\n",
+    "\n",
+    "Cost = (10 * 1.0) + (2 * 4.0) + (500 * 0.01) + (200 * 0.005) + (100 * 0.0025)  \n",
+    "     = 10 + 8 + 5 + 1 + 0.25  \n",
+    "     = 24.25\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
